Fix the scrollbar in the community bar
Currently the scrollbar is always visible because the inner container is 5px
bigger in height than the outer container. This is hereby fixed.

--- a/res/css/structures/_TagPanel.scss
+++ b/res/css/structures/_TagPanel.scss
@@ -65,7 +65,7 @@ limitations under the License.
     align-items: center;
     margin-top: 5px;
 
-    height: 100%;
+    height: calc(100% - 5px);
 }
 .mx_TagPanel .mx_TagPanel_tagTileContainer > div {
     height: 40px;
